Compiler/tests/bad/Ifs/02_ifs.rs
// unmatch else condition

fn main(){
    let x:bool = false;
    if x || false{
        println!(x);
    } else {
        else {
            println!(23);
        }
    }
}